--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 modGroup=com.buuz135
-modVersion=1.0-SNAPSHOT
+mod_version=1.0.0
+minecraft_version=1.12.2
 modBaseName=refinedstoragerequestify
 forgeVersion=1.12.2-14.23.5.2768
 mcpVersion=stable_39
