--- a/build.gradle
+++ b/build.gradle
@@ -123,8 +123,8 @@ repositories {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.16.3-34.1.0'
-    compileOnly fg.deobf("com.refinedmods:refinedstorage:1.9.6+80")
-    runtimeOnly fg.deobf("com.refinedmods:refinedstorage:1.9.6+80")
+    compileOnly fg.deobf("com.refinedmods:refinedstorage:1.9.8+")
+    runtimeOnly fg.deobf("com.refinedmods:refinedstorage:1.9.8+")
     compileOnly fg.deobf("mezz.jei:jei-1.16.3:7.5.0.42:api")
     // at runtime, use the full JEI jar
     runtimeOnly fg.deobf("mezz.jei:jei-1.16.3:7.5.0.42")
