--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ minecraft_version=1.16.3
 modBaseName=rsrequestify
 forgeVersion=1.12.2-14.23.5.2768
 mcpVersion=stable_39
+org.gradle.java.home=C:/Program Files/AdoptOpenJDK/jdk-8.0.265.01-hotspot
