--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
     }
 }
 plugins {
-    id "com.github.hierynomus.license" version "0.14.0"
+    id 'org.cadixdev.licenser' version '0.6.1'
     id "com.matthewprenger.cursegradle" version "1.1.0"
 }
 apply plugin: 'net.minecraftforge.gradle'
@@ -174,16 +174,14 @@ curseforge {
 }
 
 license {
-    header rootProject.file('HEADER')
-    include "**/*.java"
-    ext.year = Calendar.getInstance().get(Calendar.YEAR)
-    ext.name = 'Buuz135'
-    ext.mod = 'RS: Requestify'
-    ignoreFailures = true
-    mapping {
-        java = 'SLASHSTAR_STYLE'
+    header = project.file('HEADER')
+    ext {
+        year = Calendar.getInstance().get(Calendar.YEAR)
+        name = 'Buuz135'
+        mod = 'RSRequestifyu'
     }
 }
+
 
 jar {
     manifest {
