--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url = "https://files.minecraftforge.net/maven" }
+        maven { url = "https://maven.minecraftforge.net/" }
         maven {
             url "https://plugins.gradle.org/m2/"
         }
@@ -122,9 +122,9 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.3-34.1.0'
-    compileOnly fg.deobf("com.refinedmods:refinedstorage:1.9.8+")
-    runtimeOnly fg.deobf("com.refinedmods:refinedstorage:1.9.8+")
+    minecraft 'net.minecraftforge:forge:1.16.5-36.2.0'
+    compileOnly fg.deobf("com.refinedmods:refinedstorage:1.9.15+")
+    runtimeOnly fg.deobf("com.refinedmods:refinedstorage:1.9.15+")
     compileOnly fg.deobf("mezz.jei:jei-1.16.3:7.5.0.42:api")
     // at runtime, use the full JEI jar
     runtimeOnly fg.deobf("mezz.jei:jei-1.16.3:7.5.0.42")
