--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,3 +7,17 @@ version = "${file.jarVersion}"
 displayName = "RSRequestify"
 authors = "Buuz135"
 description = "Display your achievements with style"
+
+[[dependencies.rsrequestify]]
+    modId="refinedstorage"
+    mandatory=true
+    versionRange="[1.10.0-beta.4,)"
+    ordering="NONE"
+    side="BOTH"
+
+[[dependencies.rsrequestify]]
+    modId="minecraft"
+    mandatory=true
+    versionRange="[1.18,)"
+    ordering="NONE"
+    side="BOTH"
