--- a/build.gradle
+++ b/build.gradle
@@ -115,12 +115,12 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.18.1-39.0.55'
-    implementation fg.deobf("com.refinedmods:refinedstorage:1.10.0-beta.4") {
+    minecraft 'net.minecraftforge:forge:1.19.2-43.1.3'
+    implementation fg.deobf("com.refinedmods:refinedstorage:1.11.0") {
         transitive false
     }
-    compileOnly fg.deobf("mezz.jei:jei-1.18.1:9.2.3.78:api")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.18.1:9.2.3.78")
+    compileOnly fg.deobf("mezz.jei:jei-1.19.2-forge-api:11.3.0.262")
+    runtimeOnly fg.deobf("mezz.jei:jei-1.19.2-forge:11.3.0.262")
 }
 jar {
     manifest {
