--- a/build.gradle
+++ b/build.gradle
@@ -115,12 +115,12 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.2-43.1.3'
-    implementation fg.deobf("com.refinedmods:refinedstorage:1.11.0") {
-        transitive false
-    }
-    compileOnly fg.deobf("mezz.jei:jei-1.19.2-forge-api:11.3.0.262")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.19.2-forge:11.3.0.262")
+    minecraft 'net.minecraftforge:forge:1.20.1-47.0.43'
+
+    compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:15.1.0.19")
+    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.1.0.19")
+
+    implementation fg.deobf("curse.maven:refined-storage-243076:4623636")
 }
 jar {
     manifest {
